# streamlit-daisy

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  start.bat
.streamlit/: template.html
src/: streamlit_daisy.py
