[project]
name = "streamlit-daisy"
version = "1.0.0"
dependencies = [
    'streamlit', 
    'streamlit-bridge',
]
requires-python = ">=3.6"
authors = [
  {name = "La centrale cognitive", email = "lacentrale.cognitive@gmail.com"},
  {name = "mr_kam", email = "kanicetcyrille@gmail.com"},
]
maintainers = [
  {name = "mr_kam", email = "kanicetcyrille@gmail.com"},
]
description = "A streamlit extension with beautiful ui component"
readme = "README.md"
license = {file = "LICENSE.txt"}
keywords = ["streamlit", "ui", "dashboard", "python", "gui", "data"]
classifiers = [
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    "Topic :: Software Development :: Build Tools",
]

[project.urls]
Homepage = "https://github.com/Mr-KAM/streamlit-daisy"
Documentation = "https://github.com/Mr-KAM/streamlit-daisy"
Repository = "https://github.com/Mr-KAM/streamlit-daisy.git"
"Bug Tracker" = "https://github.com/Mr-KAM/streamlit-daisy/issues"
